Add feature to update all persons in events