@@ -10,6 +10,7 @@ import static seedu.address.testutil.TypicalPersons.ALICE;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Set;
 import java.util.function.Predicate;
 
@@ -45,7 +46,7 @@ public class AddCommandTest {
 
         assertEquals(String.format(AddCommand.MESSAGE_SUCCESS, Messages.format(validPerson)),
                 commandResult.getFeedbackToUser());
-        assertEquals(Arrays.asList(validPerson), modelStub.personsAdded);
+        assertEquals(List.of(validPerson), modelStub.personsAdded);
     }
 
     @Test
@@ -198,6 +199,21 @@ public class AddCommandTest {
 
         @Override
         public Set<Group> findInvalidGroups(Set<Group> groups) {
+            throw new AssertionError("This method should not be called.");
+        }
+
+        @Override
+        public Set<Group> getEmptyGroups(Person person) {
+            throw new AssertionError("This method should not be called.");
+        }
+
+        @Override
+        public void removeEmptyGroups(Set<Group> emptyGroups) {
+            throw new AssertionError("This method should not be called.");
+        }
+
+        @Override
+        public void updateGroups() {
             throw new AssertionError("This method should not be called.");
         }
     }
